# michadame

./: Cargo.toml  LICENSE  Readme.md
src/: app.rs  config.rs  main.rs
src/devices/: audio.rs  filter_type.rs  filters.rs  mod.rs  usb.rs  video.rs
src/ui/: controls.rs  dialogs.rs  mod.rs
src/video/: decoder.rs  gpu_filter.rs  mod.rs  types.rs
