# Cargo.toml

[package]
name = "michadame"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
glob = "0.3.1"
libpulse-binding = "2.30.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Lock all egui-related crates to the same version to prevent conflicts.
eframe = { version = "0.27.2", default-features = true }
egui = "0.27.2"
