# Cargo.toml

[package]
name = "michadame"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = "0.5.1"
crossbeam-channel = "0.5.12"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
glob = "0.3.1"
libpulse-binding = "2.30.1"
ffmpeg-next = "8.0.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
image = { version = "0.25", features = ["png"] }

# Lock all egui-related crates to the same version to prevent conflicts.
eframe = { version = "0.27.2", default-features = true }
egui = "0.27.2"